assets/css/style.css
/* ... */
.navbar-dark .navbar-nav .nav-link {
    color: var(--text-color);
}

.navbar-brand {
    font-size: min(max(18px, 4vw), 32px);
    margin: 0;
    color: var(--link-color);
}
.navbar-brand:hover {
    font-size: min(max(19px, 4.1vw), 33px);
    margin: 0;
    color: var(--link-hover-color);
}

.navbar-brand a {
    color: var(--text-color);
    margin: auto;
    text-align: center;
}

.navbar-toggler {
    width: 100%;
    color: var(--text-color);
}

.navbar-collapse {
    text-align: center;
    width: 100%;
}

.logo-img-filtering {
    height: 6rem;
    filter: opacity(0.5) drop-shadow(0 0 0 var(--text-color));
    margin-top: 0.7rem;
}

.nav-link {
    opacity: 0.5;
    color: var(--link-color);
    width: 100%;
    font-size: min(max(16px, 6vw), 20px);
    text-transform: uppercase;
}

.nav-item {
    min-width: 150px;
    width: 100%;
    opacity: 0.8;
}

.nav-link.active {
    opacity: 1;
    -webkit-box-shadow: 20px 70px 50px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    -moz-box-shadow: 20px 70px 50px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    box-shadow: 20px 70px 50px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
}

.nav-link:hover {
    opacity: 0.9;
    color: var(--link-hover-color);
    -webkit-box-shadow: 70px 70px 70px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    -moz-box-shadow: 70px 70px 70px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    box-shadow: 70px 70px 70px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    border: none;
    border-radius: 4px;
    transition: 0.3s;
}
.navbar-nav .nav-link.active, .navbar-nav .show>.nav-link {
    color: var(--link-active-color);
}

#logo-wr {
    width: 100px;
    height: 100px;
    display: block;
    flex-direction: column;
    flex-direction: column;
}

.logo-link {
    display: block;
}

#logo-wr img {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
}

#header-title {
    font-size: 2em;
    color: var(--text-color);
    display: flex;
    flex-direction: column;
}

.nav-wr {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin: 0;
    padding: 0;
}


/* special classes to style different elements*/

.center-content {
    text-align: center;
    margin: 30px 0 0 0;
    padding: 15px 0 10px 0;
}

.heading-alignment {
    text-align: center;
    padding: 15px 0 0 0;
}

.center-p {
    font-size: small;
    text-align: center;
    margin: 0;
    letter-spacing: 0.1rem;
}

.align-vert {
    position: inherit;
    margin-top: calc(20vh - 10px) !important;
    margin-bottom: calc(20vh - 10px) !important;
}

.description-p {
    padding: 20px 20px 20px 15px;
    font-size: medium;
    text-align: justify;
    margin: 0;
    letter-spacing: 0.1rem;
}

.loading {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 2rem 0;
    width: 100%;
    height: 100%;
    background-color: transparent;
}

.fa-xmark {
    color: var(--accent-color);
}

.btp-wr {
    text-align: center;
    margin-top: 30px;
    btp-wr
}

.fetching-res {
    max-width: 1024px;
    margin-bottom: 20px;
    border-radius: 5px;
}

.backToTop {
    font-size: small;
    padding: 0.2rem 0.5rem;
    opacity: 0.9;
    text-decoration: none;
    box-shadow: 10px 10px 50px var(--complimentary-color) inset, 0 0 0 var(--accent-color);
    color: var(--text-color);
    border-radius: 5px;
}

.backToTop:hover {
    opacity: 1;
    background-color: #552f1e;
    color: #ece7e1;
    border: 1px solid transparent;
}

.sources-links {
    text-align: center;
}

.sources-links>a {
    font-size: small;
    padding: 0.2rem 0.5rem;
}


/* Override Google Maps infowindow text color */

.gm-style-iw-d>* {
    color: #552f1e;
}


/* ---CTA section------------------------------------------------ */

#wiki_callToAction {
    padding: 1rem;
    background-color: rgba(239, 160, 11, 0.28);
    border-radius: 4px;
    margin: 15px 0.5% 0.5% 0.5%;
}

#wiki_callToAction>h3 {
    text-align: center;
    margin-bottom: 0;
    padding-top: 0.5rem;
}

#wiki_callToAction>p {
    text-align: center;
    margin-bottom: 0;
}


/* CTA Custom Button CSS Button Hover effect code snnipet (https://www.sliderrevolution.com/resources/css-button-hover-effects/) */

.cta-color {
    opacity: 0.7;
    color: var(--dominant-color);
    background-color: var(--accent-color) !important;
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: 0.5s;
    border-radius: 4px;
    border: none;
    text-align: center;
    font-size: 1.7rem;
    transition: all 0.5s;
    box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7);
}

.cta-color:after {
    content: "»";
    position: absolute;
    opacity: 0;
    bottom: 5px;
    right: -5px;
    transition: 0.3s;
}

.cta-color:hover {
    opacity: 0.9;
    color: var(--complimentary-color);
    padding-right: 44px;
    padding-left: 8px;
}

.cta-color:hover:after {
    opacity: 1;
    right: 10px;
}


/* Figure elements */

figure>img {
    display: block;
    margin: 0 auto;
    padding: 10px 10px 10px 10px;
    max-width: 100%;
}

figure>figcaption {
    text-align: center;
    font-size: small;
    margin: 0;
    padding: 0;
}

.main-png-container {
    width: 90%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
    overflow: hidden;
    position: relative;
}

.dobrudja-png {
    background-image: url('../images/dobruja_in_europe_map-554-480.png');
    background-size: 600px 520px;
    background-position: center;
    transition: all 1s ease;
    width: 100%;
    height: 100%;
    transform: scale(1);
    position: relative;
    left: 0;
    top: 0;
    transform-origin: 15% 15%;
    -webkit-transform-origin: 15% 15%;
}
/* ... */

